--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
 
-10d_Grics/.idea/workspace.xml
-11d_Grics/.idea/misc.xml
-11d_Grics/.idea/modules.xml
-11d_Grics/.idea/vcs.xml
-11d_Grics/.idea/workspace.xml
-11d_Grics/.idea/11d_Grics.iml
-10d_Grics/.idea/workspace.xml
+Referats/Grics_161VDB001_Limonade.pptx
+Referats/Grics_161VDB001_Limonade.docx
+Referats/links.txt
+Danils_Grics_161VDB001_FinalWork_School/Parskats.docx
